Proposed fix for bug #3412 (embedded server: prepared statement returns empty recordset where some records should be found)